0.10

0.09 2022-11-04T01:54:46+01:00
 - Add _cleanup() method to overwrite.

0.08 2022-10-29T17:07:43+02:00
 - Add script_js() and script_js_src() methods.
 - Set preserved for style element in Tags default.

0.07 2022-09-12T18:53:17+02:00
 - Add better checks for css() and tags() accessors.
 - Rename examples to better names.

0.06 2022-07-08T00:21:53+02:00
 - Update Tags::HTML::Page::Begin to 0.13.

0.05 2022-05-13T18:01:38+02:00
 - Add test for app without title.
 - Fix minimal dependency for Tags::HTML::Page::Begin. With optional title
   element.

0.04 2022-05-12T14:17:02+02:00
 - Rewrite prepare_app() and creating of default 'tags' and 'css' objects.
   Add errors for bad objects.

0.03 2022-05-11T10:26:21+02:00
 - Fix copyright years.
 - Fix doc escape sequences.

0.02 2022-02-28T12:38:08+01:00
 - Fix minimal dependency for Tags::HTML::Page::Begin. There is fix for
   situation without CSS. Fixes GH#1 (Thanks Slaven Rezić).

0.01 2022-02-27T19:55:18+01:00
 - First version.