@@ -51,6 +51,16 @@ ACCESSOR METHODS
     CSS::Struct::Output object. Default value is
     CSS::Struct::Output::Raw->new.
 
+  "css_init"
+    Reference to array with CSS::Struct structure. Default value is CSS
+    initialization from Tags::HTML::Page::Begin like
+
+     * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+     }
+
   "encoding"
     Set encoding for output. Default value is 'utf-8'.
 
@@ -178,7 +188,9 @@ EXAMPLE1
 
      # Output by GET to http://localhost:5000/:
      # <!DOCTYPE html>
-     # <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>My app</title></head><body>Hello world</body></html>
+     # <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>My app</title><style type="text/css">
+     # *{box-sizing:border-box;margin:0;padding:0;}
+     # </style></head><body>Hello world</body></html>
 
 EXAMPLE2
      package App;
