@@ -1,4 +1,5 @@
 0.10
+ - Add css_init() accessor and update to new Tags::HTML::Page::Begin.
 
 0.09 2022-11-04T01:54:46+01:00
  - Add _cleanup() method to overwrite.
